--- a/package.json
+++ b/package.json
@@ -41,5 +41,7 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@clerk/clerk-react": "^5.59.2"
   }
-}
