--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
     ]
   },
   "include": ["**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "server"]
 }
