--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,11 @@
     "ignoreDeprecations": "6.0",
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
     "target": "ES2020",
     "module": "commonjs",
-    "lib": [
-      "ES2020",
-      "dom",
-      "dom.iterable"
-    ],
+    "lib": ["ES2020", "dom", "dom.iterable"],
     "outDir": "./dist",
     "rootDir": "./",
     "strict": true,
@@ -39,8 +33,5 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "server"
-  ]
+  "exclude": ["node_modules", "server"]
 }
